dropshot/tests/fail/bad_trait_channel23.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_trait_channel23.rs:21:7
   |
21 | trait MyServer {
   |       ^^^^^^^^

error: endpoint `const_endpoint` must not be a const fn
  --> tests/fail/bad_trait_channel23.rs:29:5
   |
29 |     const async fn const_endpoint(
   |     ^^^^^

error[E0379]: functions in traits cannot be declared const
  --> tests/fail/bad_trait_channel23.rs:29:5
   |
29 |     const async fn const_endpoint(
   |     ^^^^^-
   |     |
   |     functions in traits cannot be const
   |     help: remove the `const`

error: functions cannot be both `const` and `async`
  --> tests/fail/bad_trait_channel23.rs:29:5
   |
29 |       const async fn const_endpoint(
   |       -^^^^ ^^^^^ `async` because of this
   |       |
   |  _____`const` because of this
   | |
30 | |         _rqctx: RequestContext<Self::Context>,
31 | |         _param1: Query<QueryParams>,
32 | |         _upgraded: WebsocketConnection,
33 | |     ) -> dropshot::WebsocketChannelResult;
   | |__________________________________________-

error[E0379]: functions in trait impls cannot be declared const
  --> tests/fail/bad_trait_channel23.rs:42:5
   |
42 |     const async fn const_endpoint(
   |     ^^^^^-
   |     |
   |     functions in trait impls cannot be const
   |     help: remove the `const`

error: functions cannot be both `const` and `async`
  --> tests/fail/bad_trait_channel23.rs:42:5
   |
42 |       const async fn const_endpoint(
   |       -^^^^ ^^^^^ `async` because of this
   |       |
   |  _____`const` because of this
   | |
43 | |         _rqctx: RequestContext<()>,
44 | |         _param1: Query<QueryParams>,
45 | |         _upgraded: WebsocketConnection,
46 | |     ) -> dropshot::WebsocketChannelResult {
47 | |         Ok(())
48 | |     }
   | |_____-
